--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,20 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.10.3</scala.version>
+        <scala.version>2.13.1</scala.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <groupId>org.scalatestplus</groupId>
+            <artifactId>junit-4-13_2.13</artifactId>
+            <version>3.2.9.0</version>  <!-- May 2021 -->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.10</artifactId>
-            <version>2.0</version>
+            <artifactId>scalatest_2.13</artifactId>
+            <version>3.2.2</version>  <!-- Aug 2020 -->
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -47,9 +47,14 @@
             <version>${scala.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-swing</artifactId>
-            <version>${scala.version}</version>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-swing_2.13</artifactId>
+            <version>3.0.0</version>  <!-- May 2021 -->
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-xml_2.13</artifactId>
+            <version>1.3.0</version>  <!-- Mar 2020 -->
         </dependency>
     </dependencies>
 
@@ -58,23 +63,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.1</version>  <!-- May 2019 -->
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <compilerArgument>-Xlint:unchecked</compilerArgument>
+                    <release>11</release>
+                    <debug>true</debug>
                 </configuration>
             </plugin>
 
             <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <version>2.15.2</version>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>4.5.2</version>  <!-- May 2021 -->
                 <executions>
                     <execution>
                         <goals>
-                             <goal>compile</goal>
-                             <goal>testCompile</goal>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
                         </goals>
                     </execution>
                 </executions>
